force-app/main/default/objects/Account/fields/testPMT1__c.field-meta.xml
<CustomField>
    <fullName>testPMT1__c</fullName>
    <label>testPMT1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>