force-app/main/default/objects/Account/fields/testPMT__c.field-meta.xml
<CustomField>
    <fullName>testPMT__c</fullName>
    <description>test</description>
    <label>testPMT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>