force-app/main/default/objects/Account/fields/testPMTPrash__c.field-meta.xml
<CustomField>
    <fullName>testPMTPrash__c</fullName>
    <label>testPMTPrash</label>
    <length>30</length>
    <type>Text</type>
</CustomField>